# OpenGL-Starter

./: .gitmodules  CMakeLists.txt  README.md  build.sh  cbr.sh  configure.sh  cross-compliation.cmake  run.sh
include/glad/: glad.h
libraries/ClownLib/: CMakeLists.txt
libraries/ClownLib/include/: ClownLib.h
libraries/ClownLib/include/ClownLib/: ClownLib.h
libraries/ClownLib/src/: ClownLib.cpp  vertexShader.glsl
resources/Shaders/: FragmentShader.glsl  fragmentShader2.glsl  vertexShader.glsl  vertexShader2.glsl  visibilityFragShader.glsl
resources/Textures/: furrytexture.csv
src/: Callbacks.h  Shader.cpp  Shader.h  UserInput.cpp  UserInput.h  glad.c  main.cpp
